--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose test/*"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,8 @@
     "fs": "^0.0.1-security",
     "inquirer": "^8.2.0",
     "node": "^17.4.0"
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
   }
 }
